# chainlit_langGraph

./: .env.example  .gitignore  README.markdown  README.md  hello.py  pyproject.toml
.chainlit/: config.toml
.data/postgres/: postmaster.pid
.data/postgres/base/1/: 2619  2696  2840  2841
.data/postgres/base/4/: 2619
.data/postgres/base/5/: 1247  1249  1255  1255_vm  1259  1259_vm  16386  16392  16393  16453  16453_fsm  16460  16461  16463  16471  16480  16481  16483  16483_fsm  16483_vm  16492  16493  16495  16495_fsm  16502  16503  16505  16506  16507  16508  16509  16510  16511  16512  16513  16514  16515  16516  16517  16518  (+51 more)
.data/postgres/global/: 1260  pg_control  pg_internal.init
.data/postgres/pg_multixact/members/: 0000
.data/postgres/pg_multixact/offsets/: 0000
.data/postgres/pg_xact/: 0000
demo_app/: speach_to_speach.py  speach_to_text.py  text_to_text.py
demo_app/src/: embeddings.py  graph.py  nodes.py  tools.py
public/: theme.json
